@@ -9,7 +9,18 @@ FROM openjdk:11.0.3-jdk-slim
 WORKDIR /voovan
 COPY --from=maven /voovan/target/voovan-bench-0.1-jar-with-dependencies.jar app.jar
 COPY --from=maven /voovan/config/framework.properties config/framework.properties
-CMD java  -server -Xms2g -Xmx2g \
-    --illegal-access=warn -XX:-RestrictContended -XX:+UseParallelGC -XX:+UseNUMA \
-    -DThreadBufferPoolSize=256 -DAsyncSend=false \
+
+CMD java -DCheckTimeout=false \
+    -DThreadBufferPoolSize=1024 \
+    -DByteBufferSize=4096 \
+    -DAsyncSend=false \
+    -DAsyncRecive=false \
+    -DByteBufferAnalysis=-1\
+    -DServer=v \
+    -server -Xms2g -Xmx2g \
+    -XX:+DoEscapeAnalysis \
+    -XX:+AlwaysPreTouch \
+    -XX:-RestrictContended \
+    -XX:+UseParallelGC -XX:+UseNUMA \
+    -XX:+AggressiveOpts -XX:+UseBiasedLocking \
     -cp ./config:voovan.jar:app.jar org.voovan.VoovanTFB
